2014-January-14 Struan Robertson

	* MESMER manual.docx: Added documentation for analytical representation.

2014-January-10 Chris Morley
	* src/error.h: StopCTestOutput works only when ErrorLevel is > obDebug,
	  i.e. ctest output is enabled with -w5 option in command or 
	  ChangeErrorLevel e(obDebug); in C++ code if fitting function.

	* src/plugins/fitting.cpp,src/plugins/Marquardt.cpp,
	  src/plugins/SensitivityAnalysis.cpp: ctest output supressed by default.

2013-December-29 Struan Robertson

	* MESMER manual.docx: Added content regarding XML Schema.

2013-December-20 Struan Robertson

	* MolecularComponents.h/.cpp: Minor changes related to the rationalization
	of the reservoir state code.

2013-December-19 Chris Morley

	* src/plugins/AnalyticalRepresentation.cpp: expand reaction strings
	to include all the species for easier pasting to Cantera.

	* src/BimolecularSinkReaction.cpp,src/BimolecularSinkReaction.h,
	src/IrreversibleUnimolecularReaction.cpp,src/IrreversibleUnimolecularReaction.h,
	src/CollisonOperator.cpp: increase possible number of sink products to three.
	
	* src/Reaction.cpp,src/Reaction.h,src/ReactionManager.cpp,
	src/ReactionManager.h,src/CollisionOperator.cpp: add some reasonably
	gereneral functions for reaction strings.

2013-December-14 Struan Robertson

	* AnalyticalRepresentation.cpp: Initial revision of Chemkin format writer.

2013-December-13 Chris Morley

	Fix crash with Methyl_H_to_Methane_FTST.xml
	* src/MolecularComponents.cpp,src/Rdouble.cpp,src/unitsConversion.cpp:
	  Make "units" attribute on me:ZPE optional. On any range variable it
	  is ignored when there is a "derivedFrom" attribute. Provide more
	  meaningful cinfo message.

	Extra functions which may be needed for AnalyticalRepresentation.
	* src/Reaction.cpp,src/Reaction.h,src/AssociationReaction.h,
	  src/BimolecularSinkReaction.h,src/IrreversibleExchangeReaction.h,
	  src/IrreversibleUnimolecularReaction.h,src/IsomerizationReaction.h: