@@ -377,12 +377,13 @@
             </xs:complexType>
           </xs:element>
           <xs:element name="format" minOccurs="0">
-            <xs:simpleType>
-              <xs:restriction base="xs:string">
-                <xs:enumeration value="chemkin"/>
-                <xs:enumeration value="cantera"/>
-              </xs:restriction>
-            </xs:simpleType>
+            <xs:complexType>
+              <xs:simpleContent>
+                <xs:extension base="analRepFormatType">
+                  <xs:attribute name="rateUnits" type="rateConstUnits" use="optional"/>
+                </xs:extension>
+              </xs:simpleContent>
+           </xs:complexType>
           </xs:element> 
           <xs:element name="chebNumTemp" type="xs:integer" minOccurs="0"/> 
           <xs:element name="chebNumConc" type="xs:integer" minOccurs="0"/> 
@@ -414,6 +415,13 @@
       </xs:extension>
     </xs:complexContent>
   </xs:complexType>
+
+  <xs:simpleType name="analRepFormatType">
+    <xs:restriction base="xs:string">
+      <xs:enumeration value="cantera"/>
+      <xs:enumeration value="chemkin"/>
+    </xs:restriction>
+  </xs:simpleType>
 
   <xs:complexType name="marquardt">
     <xs:complexContent>
